Fixed purple image stretching

--- a/src/components/Layout/bootstrap-custom.scss
+++ b/src/components/Layout/bootstrap-custom.scss
@@ -87,6 +87,15 @@ $xl: 1200px; //Extra Large screen start
   color: #050505 !important;
 }
 
+.purple-banner-image{
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
+
 
 
 @media only screen and (max-width: $md) {
